[ci skip] Set min_samples_leaf=30 instead of max_leaf_nodes=30 for the RF exercise 9579085034f41274c1133d3b20f99e51c9254028

--- a/_sources/content/notebooks/feature_engineering.ipynb
+++ b/_sources/content/notebooks/feature_engineering.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "84cc7063",
+   "id": "c354b504",
    "metadata": {},
    "source": [
     "# Feature engineering for electricity load forecasting\n",
@@ -40,7 +40,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "c90d3296",
+   "id": "b6ab417e",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -51,7 +51,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "75486e68",
+   "id": "82cd14f1",
    "metadata": {},
    "source": [
     "\n",
@@ -65,7 +65,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "09b1c140",
+   "id": "d5b1ee07",
    "metadata": {
     "lines_to_next_cell": 2
    },
@@ -89,7 +89,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "18405d0a",
+   "id": "61eba2dd",
    "metadata": {},
    "source": [
     "## Shared time range for all historical data sources\n",
@@ -114,7 +114,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "e21fe4f1",
+   "id": "a500bb23",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -129,7 +129,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "2c7c23d1",
+   "id": "7d901b05",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -157,7 +157,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "bd5d4b67",
+   "id": "ed0d275a",
    "metadata": {},
    "source": [
     "\n",
@@ -176,7 +176,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "947ffe77",
+   "id": "5659f501",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -188,7 +188,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "986458f7",
+   "id": "33f58cd4",
    "metadata": {},
    "source": [
     "\n",
@@ -200,7 +200,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "d78af81b",
+   "id": "a1bf360e",
    "metadata": {
     "lines_to_next_cell": 2
    },
@@ -245,7 +245,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "9040ea31",
+   "id": "2ca73e10",
    "metadata": {
     "lines_to_next_cell": 2
    },
@@ -269,7 +269,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "06dd06c5",
+   "id": "8ad4e256",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -298,7 +298,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "9d781d80",
+   "id": "4059499f",
    "metadata": {
     "lines_to_next_cell": 0
    },
@@ -313,7 +313,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "da16f2c5",
+   "id": "3fdc6d5a",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -357,7 +357,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "ed71419c",
+   "id": "90bc9600",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -367,7 +367,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "b8619147",
+   "id": "3f2cdf81",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -381,7 +381,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "e4a5c16c",
+   "id": "07ab1bbb",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -394,7 +394,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "f7f0a7e9",
+   "id": "473bc87d",
    "metadata": {
     "lines_to_next_cell": 2
    },
@@ -412,7 +412,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "7a983352",
+   "id": "fa695a69",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -444,7 +444,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "e62e6060",
+   "id": "e992a9eb",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -467,7 +467,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "5f76d245",
+   "id": "2a9ae0ad",
    "metadata": {},
    "source": [
     "## Investigating outliers in the lagged features\n",
@@ -479,7 +479,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "fb4cc7f8",
+   "id": "58aa0d38",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -490,7 +490,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "b79127e2",
+   "id": "25bcec81",
    "metadata": {},
    "source": [
     "\n",
@@ -501,7 +501,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "b4122f4f",
+   "id": "b134846b",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -512,7 +512,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "6f2be86f",
+   "id": "b5b622af",
    "metadata": {},
    "source": [
     "\n",
@@ -524,7 +524,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "8a4c1624",
+   "id": "204d91b5",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -548,7 +548,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "35d9251e",
+   "id": "2ace259f",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -568,7 +568,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "29e30b4b",
+   "id": "e2f877b8",
    "metadata": {},
    "source": [
     "\n",
@@ -593,7 +593,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "093e4506",
+   "id": "906462db",
    "metadata": {},
    "source": [
     "## Final dataset\n",
@@ -605,7 +605,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "c41cbfbf",
+   "id": "ac7141ed",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -638,7 +638,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "73fffaa1",
+   "id": "4ca6fe74",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -696,7 +696,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "099de01c",
+   "id": "d18e99cb",
    "metadata": {},
    "source": [
     "\n",
@@ -707,7 +707,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "d8ebd70e",
+   "id": "5feadb28",
    "metadata": {
     "lines_to_next_cell": 2
    },
@@ -739,7 +739,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "cad0fb3a",
+   "id": "9d2f96a0",
    "metadata": {
     "lines_to_next_cell": 0
    },
@@ -751,7 +751,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "7191df40",
+   "id": "ac8f31c9",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -764,7 +764,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "7bd49683",
+   "id": "a27c10bc",
    "metadata": {},
    "source": [
     "\n",
@@ -781,7 +781,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "cef0e56b",
+   "id": "1fbee641",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -829,7 +829,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "31b34ac6",
+   "id": "135c732c",
    "metadata": {},
    "source": [
     "\n",
@@ -844,7 +844,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "989a6fe1",
+   "id": "eedcb26a",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -853,7 +853,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "902c1a78",
+   "id": "8adb6e0f",
    "metadata": {},
    "source": [
     "\n",
@@ -864,7 +864,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "f9fb94ff",
+   "id": "ce31de1a",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -874,7 +874,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "f0f73ebf",
+   "id": "8500a2d5",
    "metadata": {},
    "source": [
     "\n",
@@ -885,7 +885,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "e16a3390",
+   "id": "0febb7b2",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -894,7 +894,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "202961ad",
+   "id": "a5c35267",
    "metadata": {},
    "source": [
     "\n",
@@ -911,7 +911,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "6707a342",
+   "id": "26f4c59b",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -936,7 +936,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "b2c4443a",
+   "id": "7e4e829d",
    "metadata": {},
    "source": [
     "\n",
@@ -954,7 +954,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "9f8e727e",
+   "id": "881efa9f",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -986,7 +986,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "0cd67db2",
+   "id": "85ce5a7f",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1013,7 +1013,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "a210a2d0",
+   "id": "e0aca9dc",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1050,7 +1050,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "ff32b671",
+   "id": "11ce1ebd",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1063,7 +1063,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "37a1a379",
+   "id": "d6bdda81",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1205,7 +1205,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "3d0085e3",
+   "id": "9e3c432c",
    "metadata": {
     "lines_to_next_cell": 1
    },
@@ -1291,7 +1291,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "d3cb5d3d",
+   "id": "5b01cb1e",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1380,7 +1380,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "3e4d54e9",
+   "id": "f5ceb450",
    "metadata": {
     "lines_to_next_cell": 2
    },
@@ -1516,7 +1516,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "e31c9c1e",
+   "id": "0c879704",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1528,7 +1528,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "e1f89577",
+   "id": "91700b11",
    "metadata": {
     "lines_to_next_cell": 0
    },
@@ -1550,7 +1550,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "6ec4e3f5",
+   "id": "25117d6f",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1560,7 +1560,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "478d4830",
+   "id": "42f76686",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1570,7 +1570,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "dba471f5",
+   "id": "d68e71d0",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1591,7 +1591,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "a84798d9",
+   "id": "e7f88b99",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1607,7 +1607,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "d8fed35e",
+   "id": "188a9e5d",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1633,7 +1633,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "5838603f",
+   "id": "5ae30f39",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1659,7 +1659,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "d43b4a51",
+   "id": "e0ede71f",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1679,7 +1679,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "0775fb4b",
+   "id": "b78216be",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1689,7 +1689,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "857e1a13",
+   "id": "5aa3d11f",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1709,7 +1709,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "b9174fe2",
+   "id": "482d35fc",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1719,7 +1719,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "57dccd24",
+   "id": "8f59de5f",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1731,7 +1731,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "2fefd265",
+   "id": "6ab6a557",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1741,7 +1741,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "60687e24",
+   "id": "37a94ebe",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1753,7 +1753,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "dbc731bd",
+   "id": "5c334efa",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1770,7 +1770,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "120f190c",
+   "id": "f7fca4b7",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1786,7 +1786,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "0d16f9a8",
+   "id": "3c653784",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1854,7 +1854,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "28f4c82d",
+   "id": "4bd2b4f9",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1866,7 +1866,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "ee27e0b4",
+   "id": "eb995c31",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1877,7 +1877,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "a10345c2",
+   "id": "fc1637b1",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1913,7 +1913,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "ba15a8ca",
+   "id": "5c1dcf14",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1923,7 +1923,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "82c856a3",
+   "id": "92704563",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1968,7 +1968,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "a47b6bcf",
+   "id": "64bcf465",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1976,7 +1976,7 @@
     "from sklearn.ensemble import RandomForestRegressor\n",
     "\n",
     "multioutput_predictions_rf = features_with_dropped_cols.skb.apply(\n",
-    "    RandomForestRegressor(max_leaf_nodes=30, random_state=0, n_jobs=-1),\n",
+    "    RandomForestRegressor(min_samples_leaf=30, random_state=0, n_jobs=-1),\n",
     "    y=targets.skb.drop(cols=[\"prediction_time\", \"load_mw\"]).skb.mark_as_y(),\n",
     ").skb.set_name(\"random_forest\")"
    ]
@@ -1984,7 +1984,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "1e6bda0e",
+   "id": "6c332875",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1996,7 +1996,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "0292e741",
+   "id": "285847a2",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2008,7 +2008,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "97d6b624",
+   "id": "deadcf38",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2019,7 +2019,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "a67c39ce",
+   "id": "cf709fd0",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2035,7 +2035,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "7da84a6c",
+   "id": "5734f106",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2045,7 +2045,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "eb895c21",
+   "id": "5230e32d",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2090,7 +2090,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "be3e5120",
+   "id": "78558d85",
    "metadata": {},
    "outputs": [],
    "source": []
