--- a/jupyterlite/files/notebooks/feature_engineering.ipynb
+++ b/jupyterlite/files/notebooks/feature_engineering.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "81d4355e",
+   "id": "a12c63a4",
    "metadata": {},
    "source": [
     "# Feature engineering for electricity load forecasting\n",
@@ -40,7 +40,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "73a0ec21",
+   "id": "24bddb2d",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -51,7 +51,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "8d8f9de4",
+   "id": "7deff43a",
    "metadata": {},
    "source": [
     "\n",
@@ -65,7 +65,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "a7256598",
+   "id": "6fefe695",
    "metadata": {
     "lines_to_next_cell": 2
    },
@@ -89,7 +89,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "529f5c88",
+   "id": "f5249287",
    "metadata": {},
    "source": [
     "## Shared time range for all historical data sources\n",
@@ -114,7 +114,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "562749b9",
+   "id": "2ee935aa",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -129,7 +129,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "28faeed4",
+   "id": "d9816600",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -157,7 +157,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "c32e035f",
+   "id": "d8e55068",
    "metadata": {},
    "source": [
     "\n",
@@ -176,7 +176,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "68213b2e",
+   "id": "2e9c7975",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -188,7 +188,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "28236a07",
+   "id": "a4c367be",
    "metadata": {},
    "source": [
     "\n",
@@ -200,7 +200,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "a3e68259",
+   "id": "1e9d582b",
    "metadata": {
     "lines_to_next_cell": 2
    },
@@ -245,7 +245,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "2eef5390",
+   "id": "7a2958fb",
    "metadata": {
     "lines_to_next_cell": 2
    },
@@ -269,7 +269,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "54889945",
+   "id": "1b87109d",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -298,7 +298,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "a840831f",
+   "id": "6147a1c7",
    "metadata": {
     "lines_to_next_cell": 0
    },
@@ -313,7 +313,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "9e033226",
+   "id": "04f438f3",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -357,7 +357,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "96c81406",
+   "id": "775a3c39",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -367,7 +367,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "cfa8124a",
+   "id": "46e6804a",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -381,7 +381,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "11827200",
+   "id": "d5f926e3",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -394,7 +394,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "f32aa871",
+   "id": "be5098db",
    "metadata": {
     "lines_to_next_cell": 2
    },
@@ -412,7 +412,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "368266e2",
+   "id": "8b7518d2",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -444,7 +444,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "67f60671",
+   "id": "97ea3708",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -467,7 +467,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "de518cf4",
+   "id": "4d2146fe",
    "metadata": {},
    "source": [
     "## Investigating outliers in the lagged features\n",
@@ -479,7 +479,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "a40639cd",
+   "id": "d663ccce",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -490,7 +490,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "f14ff8ef",
+   "id": "00e666be",
    "metadata": {},
    "source": [
     "\n",
@@ -501,7 +501,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "27244b23",
+   "id": "d9ed35e8",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -512,7 +512,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "2c248f56",
+   "id": "e47e7084",
    "metadata": {},
    "source": [
     "\n",
@@ -524,7 +524,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "7c7633d4",
+   "id": "e79ddc80",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -548,7 +548,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "c21525d5",
+   "id": "6022b1ee",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -568,7 +568,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "851c9402",
+   "id": "19b75fa1",
    "metadata": {},
    "source": [
     "\n",
@@ -593,7 +593,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "50d710fe",
+   "id": "02f4ec0b",
    "metadata": {},
    "source": [
     "## Final dataset\n",
@@ -605,7 +605,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "e1982d4e",
+   "id": "b18ce501",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -638,7 +638,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "d511a800",
+   "id": "1a69b4c2",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -696,7 +696,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "196f11fc",
+   "id": "b76dda76",
    "metadata": {},
    "source": [
     "\n",
@@ -707,7 +707,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "50d197fb",
+   "id": "5a6978fa",
    "metadata": {
     "lines_to_next_cell": 2
    },
@@ -739,7 +739,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "cdcad595",
+   "id": "822afefd",
    "metadata": {
     "lines_to_next_cell": 0
    },
@@ -751,7 +751,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "59c8cb98",
+   "id": "5b508674",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -764,7 +764,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "8cad48c1",
+   "id": "7a88ca8e",
    "metadata": {},
    "source": [
     "\n",
@@ -781,7 +781,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "0c435daa",
+   "id": "82d567d2",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -829,7 +829,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "5842fc4c",
+   "id": "5c59a011",
    "metadata": {},
    "source": [
     "\n",
@@ -844,7 +844,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "56ef3719",
+   "id": "b4a71810",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -853,7 +853,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "89331d6a",
+   "id": "513b6e83",
    "metadata": {},
    "source": [
     "\n",
@@ -864,7 +864,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "f8eb4744",
+   "id": "4fbb9450",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -874,7 +874,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "09d230bf",
+   "id": "ba241119",
    "metadata": {},
    "source": [
     "\n",
@@ -885,7 +885,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "afe8e99c",
+   "id": "16decdac",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -894,7 +894,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "484163bf",
+   "id": "581a0b45",
    "metadata": {},
    "source": [
     "\n",
@@ -911,7 +911,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "8fac43ed",
+   "id": "c549fdf6",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -936,7 +936,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "ae54a694",
+   "id": "f0e2614c",
    "metadata": {},
    "source": [
     "\n",
@@ -954,7 +954,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "6ff47184",
+   "id": "47a9b14e",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -986,7 +986,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "9ab7dcae",
+   "id": "03753639",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1013,7 +1013,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "50895803",
+   "id": "c4fc2ca4",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1050,7 +1050,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "20294390",
+   "id": "dd096811",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1063,7 +1063,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "ebff6a25",
+   "id": "e7889dfa",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1205,7 +1205,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "e8e1f2b3",
+   "id": "d5fb2a1f",
    "metadata": {
     "lines_to_next_cell": 1
    },
@@ -1291,7 +1291,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "09457850",
+   "id": "dc3f7560",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1380,7 +1380,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "62af311b",
+   "id": "b11ed022",
    "metadata": {
     "lines_to_next_cell": 2
    },
@@ -1516,7 +1516,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "5ef4f9ea",
+   "id": "607830ca",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1528,7 +1528,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "c586d97f",
+   "id": "702fc8ef",
    "metadata": {
     "lines_to_next_cell": 0
    },
@@ -1550,7 +1550,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "280b1435",
+   "id": "66e61875",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1560,7 +1560,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "b73d8a36",
+   "id": "8aa58753",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1570,7 +1570,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "9a783f96",
+   "id": "1be637d0",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1591,7 +1591,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "ed7b0c69",
+   "id": "036c8e25",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1607,7 +1607,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "eea131e4",
+   "id": "18095124",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1633,7 +1633,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "a9793070",
+   "id": "b249dda0",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1659,7 +1659,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "d9a5e240",
+   "id": "fc0512a6",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1679,7 +1679,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "ed6d380e",
+   "id": "811b7447",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1689,7 +1689,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "f947495c",
+   "id": "68f29743",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1709,7 +1709,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "342b9419",
+   "id": "111c1751",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1719,7 +1719,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "30f8fdc6",
+   "id": "8b84ca06",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1731,7 +1731,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "464c13ce",
+   "id": "87e9dab5",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1741,7 +1741,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "e59c3170",
+   "id": "1a3e6eb6",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1753,7 +1753,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "4a65b11e",
+   "id": "4ca9d3e8",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1770,7 +1770,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "c98d8ea0",
+   "id": "c83f1952",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1786,7 +1786,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "0d0b9a17",
+   "id": "7cd364b1",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1854,7 +1854,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "50d68abe",
+   "id": "c9edbff4",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1866,7 +1866,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "88ceac00",
+   "id": "4cc0e4bf",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1877,7 +1877,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "a4973337",
+   "id": "791ca47c",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1913,7 +1913,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "e6b2961d",
+   "id": "334c6376",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1923,7 +1923,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "df87e8cd",
+   "id": "bae08ac3",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1968,7 +1968,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "b067e0c1",
+   "id": "8856e723",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1976,7 +1976,7 @@
     "from sklearn.ensemble import RandomForestRegressor\n",
     "\n",
     "multioutput_predictions_rf = features_with_dropped_cols.skb.apply(\n",
-    "    RandomForestRegressor(max_leaf_nodes=30, random_state=0, n_jobs=-1),\n",
+    "    RandomForestRegressor(min_samples_leaf=30, random_state=0, n_jobs=-1),\n",
     "    y=targets.skb.drop(cols=[\"prediction_time\", \"load_mw\"]).skb.mark_as_y(),\n",
     ").skb.set_name(\"random_forest\")"
    ]
@@ -1984,7 +1984,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "127c5510",
+   "id": "aeb6ba2f",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1996,7 +1996,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "ac24f4d5",
+   "id": "15b82dae",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2008,7 +2008,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "640982db",
+   "id": "8aaa17ae",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2019,7 +2019,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "ccc15fbe",
+   "id": "b25d8e1c",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2035,7 +2035,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "1aecf7e5",
+   "id": "74d5c090",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2045,7 +2045,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "baaeba5d",
+   "id": "49c0b8cc",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2090,7 +2090,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "b112ee10",
+   "id": "2e1a39d4",
    "metadata": {},
    "outputs": [],
    "source": []
